fix: fix overlay z-index

--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -145,7 +145,7 @@
 
   &-open .overlay {
     position: fixed;
-    z-index: 100;
+    z-index: 101;
 
     visibility: visible;
     opacity: 1;
